--- a/frontend/src/organizer.html
+++ b/frontend/src/organizer.html
@@ -28,7 +28,6 @@
         const baseUrl = "http://127.0.0.1:8000/api/v1"
 
         $("#showFormButton").click(function () {
-            // Проверяем, видима ли форма на данный момент
             if ($("#newConferenceForm").hasClass("hidden")) {
                 $(this).text("Закрыть форму добавления конференции");
             } else {
@@ -51,10 +50,15 @@
                 type: 'post',
                 contentType: 'application/json',
                 data: JSON.stringify(formData),
-                success: function (result) {
+                success: function () {
                     $("#newConferenceForm").toggleClass("hidden");
                     $("#showFormButton").text("Добавить конференцию");
                     location.reload();
+                },
+                error: function (jqXHR) {
+                    if (jqXHR.status === 400) {
+                        alert("Данные о конференции заполнены некорректно");
+                    }
                 }
             });
         });
@@ -122,9 +126,16 @@
                     location: location_field,
                     start_date: start_date
                 }),
-                success: function (result) {
+                success: function () {
                     location.reload();
                     $("#editForm").addClass("hidden");
+                },
+                error: function (jqXHR) {
+                    if (jqXHR.status === 400) {
+                        alert("Данные о конференции заполнены некорректно");
+                    } else if (jqXHR.status === 404) {
+                        alert("Такой конференции не существует");
+                    }
                 }
             });
         }
@@ -133,8 +144,13 @@
             $.ajax({
                 url: `${baseUrl}/conferences/${id}`,
                 type: 'DELETE',
-                success: function (result) {
+                success: function () {
                     location.reload();
+                },
+                error: function (jqXHR) {
+                    if (jqXHR.status === 404) {
+                        alert("Такой конференции не существует");
+                    }
                 }
             });
         }
