fix baseurl for in html for backend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
     </div>
     <button id="returnButton" style="display: none;">Вернуться к списку мероприятий</button>
     <script>
-        const baseUrl = "http://127.0.0.1:8000/api/v1";
+        const baseUrl = "http://localhost/api/v1";
         let lastClickedId = undefined;
 
         const refreshList = () => {
