--- a/frontend/src/organizer.html
+++ b/frontend/src/organizer.html
@@ -68,22 +68,23 @@
                 conferenceData = data;
                 for (let i = 0; i < data.length; i++) {
                     $("#conferenceList").append("<p>" + data[i].name
-                        + ` <button onclick='deleteConference(${data[i].id})'>Удалить</button>`
-                        + ` <button onclick='showEditForm(${data[i].id})'>Редактировать</button>`
-                        + ` <button onclick='showDetails(${data[i].id})'>Подробнее</button></p>`
+                        + ` <button onclick='deleteConference("${data[i].id}")'>Удалить</button>`
+                        + ` <button onclick='showEditForm("${data[i].id}")'>Редактировать</button>`
+                        + ` <button onclick='showDetails("${data[i].id}")'>Подробнее</button></p>`
                     );
                 }
             });
         });
 
         function showDetails(id) {
-            $.getJSON(`${baseUrl}/conferences/${id}`, function (data) {
+            console.log(id)
+            $.getJSON(`${baseUrl}/conferences/${id}/`, function (data) {
                 alert(`Описание: ${data.description} | Адрес проведения: ${data.location} | Время начала: ${data.start_date}`);
             });
         }
 
         function showEditForm(id) {
-            $.getJSON(`${baseUrl}/conferences/${id}`, function (data) {
+            $.getJSON(`${baseUrl}/conferences/${id}/`, function (data) {
                 $("#editForm").remove();
                 $('#showFormButton').hide()
 
@@ -104,7 +105,7 @@
                             <input type="text" id="location" name="location" value="${data.location}"><br>
                             <label for="start_date">Дата начала:</label><br>
                             <input type="datetime-local" id="start_date" name="start_date" value="${localDateTime}"><br>
-                            <button type="button" onclick="submitEditForm(${id})">Сохранить</button>
+                            <button type="button" onclick="submitEditForm('${id}')">Сохранить</button>
                         </form>`;
                 $("#conferenceList").append(formHtml);
             });
@@ -142,7 +143,7 @@
 
         function deleteConference(id) {
             $.ajax({
-                url: `${baseUrl}/conferences/${id}`,
+                url: `${baseUrl}/conferences/${id}/`,
                 type: 'DELETE',
                 success: function () {
                     location.reload();
